# Distributed_network_communication_framework_rpc

./: CMakeLists.txt  README.md  autobuild.sh
example/: CMakeLists.txt  friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: mprpcapplication.h  mprpcconfig.h  mprpccontroller.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  mprpcprovider.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcprovider.h  rpcprovider.h  zookeeperutil.h
test/protobuf/: main.cc  test  test.pb.cc  test.pb.h  test.proto
